--- a/Joana-L0501/Joana-L0501/index-test.html
+++ b/Joana-L0501/Joana-L0501/index-test.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/Css/nav-footer.css">
     <link rel="stylesheet" href="assets/Css/style.css">
     <script defer src="/assets/Javascript/script.js"></script>
-    <title>Bøf Og Vin</title>
+    <title>Bøf Og Vinssdvsdvdsvgds</title>
 </head>
 
 <body>
@@ -123,30 +123,18 @@
             <h3 class="footer-h3">Ratings</h3>
             <div class="reviews">
                 <div class="review-wrapper">
-                    <a target="_blank"
-                        href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
-                        class="ratings-a"><img class="img-review" src="assets/Images/google logo.svg"
-                            alt="Google Reviews"></a> <a target="_blank"
-                        href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
+                    <a target="_blank" href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
+                        class="ratings-a"><img class="img-review" src="assets/Images/google logo.svg" alt="Google Reviews"></a> <a target="_blank" href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
                         class="ratings-a">Google Reviews</a>
                 </div>
                 <div class="review-wrapper">
-                    <a target="_blank"
-                        href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
-                        class="ratings-a"><img class="img-review" src="assets/Images/TripAdvisor logo.svg"
-                            alt="TripAdvisor"></a> <a target="_blank"
-                        href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
+                    <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html" class="ratings-a"><img class="img-review" src="assets/Images/TripAdvisor logo.svg" alt="TripAdvisor"></a> <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
                         class="ratings-a">TripAdvisor</a>
                 </div>
 
             </div>
             <div class="review-wrapper">
-                <a target="_blank"
-                    href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
-                    class="ratings-a"><img class="img-review" src="assets/Images/Kontrol Report.svg"
-                        alt="Kontrol Report"></a> <a target="_blank"
-                    href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
-                    class="ratings-a">Kontrol Report</a>
+                <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html" class="ratings-a"><img class="img-review" src="assets/Images/Kontrol Report.svg" alt="Kontrol Report"></a> <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html" class="ratings-a">Kontrol Report</a>
             </div>
 
         </div>
@@ -159,17 +147,14 @@
             <div class="fo-icons">
                 <p class="footer-p">CALL: &emsp;<a target="_blank" href="mailto:" class="footer-a">+45 86 31 88 88</a>
                 </p>
-                <p class="footer-p">EMAIL: &emsp; <a target="_blank" href="mailto:"
-                        class="footer-a">info@bofogvin.dk</a></p>
+                <p class="footer-p">EMAIL: &emsp; <a target="_blank" href="mailto:" class="footer-a">info@bofogvin.dk</a></p>
                 <p class="footer-p">ADDRESS: <a target="_blank" href="mailto:" class="footer-a">Østerågade 18 C, 9000
                         Aalborg</a></p>
             </div>
             <div class="fo-icons">
 
-                <a target="_blank" href="https://www.facebook.com/BofogVin/" class="img-a"><img class="img-social"
-                        src="assets/Images/Facebook.svg" alt="Facebook"></a>
-                <a target="_blank" href="https://www.instagram.com/bofogvin/" class="img-a"><img class="img-social"
-                        src="assets/Images/Instagram.svg" alt="Instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/BofogVin/" class="img-a"><img class="img-social" src="assets/Images/Facebook.svg" alt="Facebook"></a>
+                <a target="_blank" href="https://www.instagram.com/bofogvin/" class="img-a"><img class="img-social" src="assets/Images/Instagram.svg" alt="Instagram"></a>
             </div>
         </div>
 
@@ -199,19 +184,12 @@
                     <h3 class="footer-h3">Ratings</h3>
                     <div class="reviews">
                         <div class="review-wrapper">
-                            <a target="_blank"
-                                href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
-                                class="ratings-a"><img class="img-review" src="assets/Images/google logo.svg"
-                                    alt="Google Reviews"></a> <a target="_blank"
-                                href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
+                            <a target="_blank" href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
+                                class="ratings-a"><img class="img-review" src="assets/Images/google logo.svg" alt="Google Reviews"></a> <a target="_blank" href="https://www.google.com/search?q=b%C3%B8f+og+vin+%C3%A5lborg+google+reviews&sxsrf=AOaemvJQw4erDcfT4gGfx1jtncQbyxt-Lw%3A1640432541281&ei=nQPHYa2-EKePxc8P4PG-kAw&oq=b%C3%B8f+og+vin+%C3%A5lborg+google+revi&gs_lcp=Cgdnd3Mtd2l6EAMYADIFCCEQoAE6BwgAEEcQsAM6BggAEBYQHjoCCCY6CAghEBYQHRAeOgcIIRAKEKABSgQIQRgASgQIRhgAUO8GWLQxYOs6aAFwAngAgAHJAYgBtQuSAQYxLjEwLjGYAQCgAQHIAQjAAQE&sclient=gws-wiz#lrd=0x4649328cfe884b23:0xa07904f41078b715,1,,,"
                                 class="ratings-txt">Google Reviews</a>
                         </div>
                         <div class="review-wrapper">
-                            <a target="_blank"
-                                href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
-                                class="ratings-a"><img class="img-review" src="assets/Images/TripAdvisor logo.svg"
-                                    alt="TripAdvisor"></a> <a target="_blank"
-                                href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
+                            <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html" class="ratings-a"><img class="img-review" src="assets/Images/TripAdvisor logo.svg" alt="TripAdvisor"></a> <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
                                 class="ratings-txt">TripAdvisor</a>
                         </div>
                     </div>
@@ -228,8 +206,7 @@
                     <div class="fo-icons">
                         <p class="footer-p">CALL:<a target="_blank" href="mailto:" class="footer-a">+45 86 31 88 88</a>
                         </p>
-                        <p class="footer-p">EMAIL: <a target="_blank" href="mailto:"
-                                class="footer-a">info@bofogvin.dk</a></p>
+                        <p class="footer-p">EMAIL: <a target="_blank" href="mailto:" class="footer-a">info@bofogvin.dk</a></p>
                         <p class="footer-p">ADDRESS: <a target="_blank" href="mailto:" class="footer-a">Østerågade 18 C,
                                 9000 Aalborg</a></p>
                     </div>
@@ -254,20 +231,14 @@
         <hr class="hr-mr">
         <div class="kontrol-mr">
             <div class="review-wrapper rev-wrap-adj">
-                <a target="_blank"
-                    href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
-                    class="ratings-a">
-                    <img class="img-review" src="assets/Images/Kontrol Report.svg" alt="Kontrol Report"></a> <a
-                    target="_blank"
-                    href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
+                <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html" class="ratings-a">
+                    <img class="img-review" src="assets/Images/Kontrol Report.svg" alt="Kontrol Report"></a> <a target="_blank" href="https://www.tripadvisor.dk/Restaurant_Review-g189529-d12148896-Reviews-Bof_Og_Vin-Aalborg_North_Jutland_Jutland.html"
                     class="ratings-txt">Kontrol Report</a>
             </div>
             <div class="fo-icons fo-icons-adj">
 
-                <a target="_blank" href="https://www.facebook.com/BofogVin/" class="img-a"><img class="img-social "
-                        src="assets/Images/Facebook.svg" alt="Facebook"></a>
-                <a target="_blank" href="https://www.instagram.com/bofogvin/" class="img-a"><img class="img-social "
-                        src="assets/Images/Instagram.svg" alt="Instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/BofogVin/" class="img-a"><img class="img-social " src="assets/Images/Facebook.svg" alt="Facebook"></a>
+                <a target="_blank" href="https://www.instagram.com/bofogvin/" class="img-a"><img class="img-social " src="assets/Images/Instagram.svg" alt="Instagram"></a>
             </div>
         </div>
     </footer>
