--- a/Joana-L0501/Joana-L0501/index.html
+++ b/Joana-L0501/Joana-L0501/index.html
@@ -44,7 +44,7 @@
         <div class="txt">Bøf og Vin</div>
 
     </div> -->
-   
+
 
     <!----------------Navigation ------------------->
     <nav class="nav-desktop">
@@ -75,10 +75,6 @@
                 <img class="logo" src="assets/Images/Bof-vin_LOGO.svg" alt="">
             </a>
         </div>
-
-
-
-
         <div id="burger-menu" class="burger-menu">
             <!-- Burger menu -->
 
@@ -174,7 +170,7 @@
 
             <div class="video">
                 <video controls width="65%" height="100%">
-                    <source src="assets/Video/Bf og Vin.mp4" type="video/mp4">
+                    <source src="assets/Video/Bof-og-vin-final.mp4" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
                 </video>
             </div>
