new text for video p

--- a/Joana-L0501/Joana-L0501/index.html
+++ b/Joana-L0501/Joana-L0501/index.html
@@ -191,10 +191,10 @@
 
                 <h1 class="video-title">Disvover our story</h1>
                 <p class="video-p">The people, food and the prime locations make Bøf og<br> Vin the perfect place for
-                    good friends & family to come <br>together and have great time. Everytime you perfectly<br> dine
-                    with us, it should happy for great inspired food in<br> an environment designed with individual
+                    good friends & family to come <br> and have great time. We ensure a great atmosphere,<br>delicious
+                    food in an environment designed with individual <br>and unique
                     touches
-                    <br> unique to the local area.
+                    to the local area.
                 </p>
 
                 <div class="read-more-btn">
