--- a/Joana-L0501/Joana-L0501/index.html
+++ b/Joana-L0501/Joana-L0501/index.html
@@ -190,11 +190,11 @@
                 <!--   <h1 class="hr-headline" id="video">KNOW US</h1> -->
 
                 <h1 class="video-title">Disvover our story</h1>
-                <p class="video-p">The people, food and the prime locations make Bøf og<br> Vin the perfect place for
-                    good friends & family to come <br> and have great time. We ensure a great atmosphere,<br>delicious
-                    food in an environment designed with individual <br>and unique
+                <p class="video-p">Bøf og Vin is the perfect place for
+                    good friends &<br> family to come and have great time. We ensure a <br> great atmosphere,delicious
+                    food in an environment<br> designed with individual and unique
                     touches
-                    to the local area.
+                    to the <br> local area.
                 </p>
 
                 <div class="read-more-btn">
