--- a/Joana-L0501/Joana-L0501/know-us.html
+++ b/Joana-L0501/Joana-L0501/know-us.html
@@ -107,7 +107,7 @@
     <section class="header-know">
         <div class="header-know-content">
             <h1>About Bøg og Vin</h1>
-            <p> Would you like to discover more about our company's history and products? <br> You've landed in the right place. </p>
+            <p>The people, food and the prime locations make Bøf og Vin the perfect place good friends & family to come together and have great time. </p>
         </div>
         <img src="./assets/Images/heading-know.png" alt=header-img>
     </section>
@@ -123,11 +123,10 @@
 
         <section class="know-intro">
             <h3>In the heart of city ,</h3>
-            <p>All of our steaks are grilled with specific spices and served on a cast iron plate to keep them warm throughout the dinner. 
-                <br>At Bof og Vin, we take pride in using only the highest-quality ingredients.
-                 As a result, we ensure that our guests have some memorable dinners.
-                <br><br> We take care in curating a wine list that is tailored to your preferences, and don't forget that we also provide food for children. 
-               Take a peek at our website's menu and allow yourself to be tempted! <br> See you at restaurant Bøf og Vin, located on Østerågade 18c in the center of Aalborg.
+            <p>The people, food and the prime locations make Bøf og Vin the perfect place good friends & family to come together and have great time. Everytime you perfectly dine with us, it should happy for great inspired food in an environment designed
+                with individual touches unique to the local area.
+                <br><br> The people, food and the prime locations make Bøf og Vin the perfect place good friends & family to come together and have great time. Everytime you perfectly dine with us, it should happy for great inspired food in an environment
+                designed with individual touches unique to the local area.
             </p>
 
             <div class="nav-reserve-btn hide">
@@ -153,22 +152,22 @@
         <div class="key1">
             <img src="./assets/Images/beef-img.png" alt="Fresh Beef">
             <h1> Fresh Beef </h1>
-            <p> In Aalborg, we are recognized for our succulent and fresh steaks. </p>
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
         </div>
         <div class="key2">
             <img src="./assets/Images/wine-img.png" alt="Quality Wine">
             <h1> Quality Wine </h1>
-            <p> We supply you with our highest-quality wine, from which you can select the best alternative based on your preferences. </p>
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
         </div>
         <div class="key3">
             <img src="./assets/Images/preorde-img.png" alt="Fresh Beef">
             <h1>Preorder Food</h1>
-            <p> You can order meals in advance and enjoy it without having to wait for it to arrive. </p>
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
         </div>
         <div class="key4">
             <img src="./assets/Images/chef-img.png" alt="Fresh Beef">
             <h1> 5 Star Cheff </h1>
-            <p> We believe that our passion for what we do and our ability to work together are what distinguishes us. </p>
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
         </div>
     </div>
 
@@ -206,8 +205,9 @@
                 </div>
                 <h1>Bøf og Vin owner and chef</h1>
                 <p class="text-medium-chef">Discover our values</p>
-                <p class="text-chef">Our deepest and most closely held beliefs, make us who we are. Passion is ours first 'core value', which  is the reason we do what we do...it's what drives us every day.
-                    <br>   <br>Serving the highest quality stakes and providing the best service for our clients. Our second core value is Harmony , meaning that we encourage teamwork in our workplace to ensure  smooth work flow.  </div>
+                <p class="text-chef">We take an enormous amount of pride in sourcing our ingredients carefully to ensure that the flavors of our food are delicious and authentic as possible.
+                    <br> <br> We are only able to achieve this level of excellence by putting an extra level of care into our menu items that is difficult to find at other restaurants.</p>
+            </div>
         </div>
         <div class="left-chef-2">
             <!-- <img src="assets/Images/img-know-2.jpg" alt=chef-bg-img> -->
