--- a/Joana-L0501/index.html
+++ b/Joana-L0501/index.html
@@ -54,7 +54,7 @@
 
 <body>
 
-   
+
 
     <!----------------Navigation ------------------->
     <nav class="nav-desktop">
@@ -147,11 +147,11 @@
             <!-- buttons -->
 
             <div class="landing-menu-button">
-                <a class="all-buttons menu-btn" href="#">MENU</i></a>
+                <a class="all-buttons menu-btn" href="menu.html">MENU</i></a>
             </div>
 
             <div class="landing-monthly-menu-button">
-                <a class="all-buttons monthly-menu-btn-1" href="#">MONTHLY MENU</i></a>
+                <a class="all-buttons monthly-menu-btn-1" href="menu.html#monthly-menu">MONTHLY MENU</i></a>
             </div>
 
             <!-- Arrow  -->
@@ -207,7 +207,7 @@
                 </p>
 
                 <div class="read-more-btn">
-                    <a class="all-buttons read-more-btn" href="#">READ MORE</i></a>
+                    <a class="all-buttons read-more-btn" href="know-us.html">READ MORE</i></a>
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                     reservation by calling or doing<br> it online and prebooking menu is available! </p>
                 <h1 class="corona-information">Don’t forget to bring CORONA PASS and to wear masks!</h1>
 
-                <a class="all-buttons contact-us-btn" href="#">CONTACT US</i></a>
+                <a class="all-buttons contact-us-btn" href="contact.html">CONTACT US</i></a>
 
             </div>
 
