--- a/Joana-L0501/menu.html
+++ b/Joana-L0501/menu.html
@@ -294,11 +294,11 @@
 
         </div>
 
-        <div id="food-main-course" style="display: none; color: aqua;">SSSSSSSSSSSS</div>
-        <div id="food-desserts" style="display: none; color: aqua;">DDDDDDDDDDDDDD</div>
-        <div id="food-drinks" style="display: none; color: aqua;">DXDXDXDXDXDXDXDXD</div>
-        <div id="food-children" style="display: none; color: aqua;">CCCCCCCCCCCCCCCCC</div>
-        <div id="food-luxury" style="display: none; color: aqua;">LLLLLLLLLLLLLLLLLLL</div>
+        <div id="food-main-course" style="display: none; color: aqua;">Should be displayed main course</div>
+        <div id="food-desserts" style="display: none; color: aqua;">Should be displayed dessert</div>
+        <div id="food-drinks" style="display: none; color: aqua;">Should be displayed main drinks</div>
+        <div id="food-children" style="display: none; color: aqua;">Should be displayed children</div>
+        <div id="food-luxury" style="display: none; color: aqua;">Should be displayed main luxury</div>
 
     </div>
 
